Fix another bug with cursor motion around display properties. Still not quite there yet.

src/xdisp.c (find_row_edges): If ROW->start.pos gives position
 smaller than min_pos, use it as ROW->minpos.  (Bug#7616)